# brainvisa-cmake

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  README.txt  bv_env.html  bv_maker.html  bv_maker_help.html  bv_maker_help_build.html  bv_maker_help_configure.html  bv_maker_help_doc.html  bv_maker_help_info.html  bv_maker_help_install_pack.html  bv_maker_help_pack.html  bv_maker_help_publish_pack.html  bv_maker_help_sources.html  bv_maker_help_status.html  bv_maker_help_test.html  bv_maker_help_test_pack.html  bv_maker_help_testref.html  bv_maker_help_testref_pack.html  bv_packaging.html  cmake_functions.html  codecov.yml  compile_existing.html  configuration.html  debian-control.in  dependencies.html  documenting.html  genindex.html  index.html  new_project.html  objects.inv  project_info.cmake  search.html  searchindex.js  testing_monitoring.html  tox.ini  (+1 more)
.doctrees/: bv_env.doctree  bv_maker.doctree  bv_maker_help.doctree  bv_maker_help_build.doctree  bv_maker_help_configure.doctree  bv_maker_help_doc.doctree  bv_maker_help_info.doctree  bv_maker_help_install_pack.doctree  bv_maker_help_pack.doctree  bv_maker_help_publish_pack.doctree  bv_maker_help_sources.doctree  bv_maker_help_status.doctree  bv_maker_help_test.doctree  bv_maker_help_test_pack.doctree  bv_maker_help_testref.doctree  bv_maker_help_testref_pack.doctree  bv_packaging.doctree  cmake_functions.doctree  compile_existing.doctree  configuration.doctree  dependencies.doctree  documenting.doctree  environment.pickle  index.doctree  new_project.doctree  testing_monitoring.doctree
_sources/: bv_maker_help.rst.txt  bv_maker_help_configure.rst.txt  bv_maker_help_doc.rst.txt  bv_maker_help_info.rst.txt  bv_maker_help_publish_pack.rst.txt  bv_maker_help_sources.rst.txt  bv_maker_help_status.rst.txt  bv_maker_help_test.rst.txt  bv_maker_help_testref_pack.rst.txt  bv_packaging.rst.txt  cmake_functions.rst.txt  configuration.rst.txt  dependencies.rst.txt  documenting.rst.txt  new_project.rst.txt  testing_monitoring.rst.txt
build_all/: CMakeLists.txt
cmake/: CMakeLists.txt  Doxyfile.in  DoxyfileDefaultValues.cmake  brainvisa-cmake-config-version.cmake.in  brainvisa-cmake-config.cmake  brainvisa-cmake-config.cmake.in  brainvisa-compilation.cmake  brainvisa-find-components.cmake  brainvisa-packaging-agg.cmake  brainvisa-packaging-blitz++.cmake  brainvisa-packaging-dcmtk.cmake  brainvisa-packaging-deb-python.cmake  brainvisa-packaging-gio.cmake  brainvisa-packaging-glib.cmake  brainvisa-packaging-gobject.cmake  brainvisa-packaging-graphviz.cmake  brainvisa-packaging-jasper.cmake  brainvisa-packaging-libFLAC.cmake  brainvisa-packaging-libasound2.cmake  brainvisa-packaging-libasyncns.cmake  brainvisa-packaging-libaudio.cmake  brainvisa-packaging-libblas.cmake  brainvisa-packaging-libboost-dev.cmake  brainvisa-packaging-libboost.cmake  brainvisa-packaging-libbrotli.cmake  brainvisa-packaging-libbz2.cmake  brainvisa-packaging-libcairo2.cmake  brainvisa-packaging-libdlib.cmake  brainvisa-packaging-libdoubleconversion.cmake  brainvisa-packaging-libexpat1.cmake  brainvisa-packaging-libffi.cmake  brainvisa-packaging-libfontconfig1.cmake  brainvisa-packaging-libfreetype6.cmake  brainvisa-packaging-libgcc1.cmake  brainvisa-packaging-libgdk-pixbuf2.cmake  brainvisa-packaging-libgfortran2.cmake  brainvisa-packaging-libgl1-mesa-swx11.cmake  brainvisa-packaging-libglu1.cmake  brainvisa-packaging-libgraphite2.cmake  brainvisa-packaging-libgstreamer.cmake  (+131 more)
cmake/modules/: FindAlsa.cmake  FindBlitz.cmake  FindDCMTK-runtime.cmake  FindDCMTK.cmake  FindDCMTK2.cmake  FindDLib.cmake  FindDocbook.cmake  FindDot.cmake  FindEpydoc.cmake  FindFontConfig.cmake  FindFop.cmake  FindGCC.cmake  FindGObject.cmake  FindGSL.cmake  FindGStreamer.cmake  FindGlib.cmake  FindHDF5.cmake  FindJpegXR.cmake  FindLIBGCC.cmake  FindLibAudio.cmake  FindLibCairo.cmake  FindLibDoubleConversion.cmake  FindLibFFI.cmake  FindLibGFortran.cmake  FindLibGettext.cmake  FindLibGraphite2.cmake  FindLibHarfbuzz.cmake  FindLibKDTree.cmake  FindLibNifti.cmake  FindLibPcre.cmake  FindLibQuadMath.cmake  FindLibReadline.cmake  FindLibSSL.cmake  FindLibXCB.cmake  FindLibicui18n.cmake  FindLibltdl.cmake  FindMINC.cmake  FindMesa.cmake  FindMinGW.cmake  FindNETCDF.cmake  (+35 more)
cmake/multiplatform/: cache-mingw-ubuntu.cmake  cache-mingw32-i586-ubuntu.cmake  toolchain-mingw-ubuntu.cmake  toolchain-mingw32-i586-ubuntu.cmake
cmake/specific/: cross_compiling.cmake  i2bm.cmake  macos.cmake  windows.cmake
cmake/specific/linux_distribution/: centos.cmake  mandriva.cmake  ubuntu.cmake
cmake/specific/windows/: FindBoost.cmake  FindDCMTK.cmake  FindFreetype.cmake  FindLibIconv.cmake  FindLibRegex.cmake  FindLibWinPthread.cmake  FindLibXml2.cmake  FindMSVCR90.cmake
cmake/toolchains/i686-w64-mingw32/: init-cache.cmake  toolchain.cmake
doc/sphinx/: bv_maker.rst  bv_maker_help.rst  bv_maker_help_build.rst  bv_maker_help_install_pack.rst  bv_maker_help_pack.rst  bv_maker_help_sources.rst  bv_maker_help_status.rst  bv_maker_help_test.rst  bv_maker_help_test_pack.rst  bv_maker_help_testref.rst  bv_maker_help_testref_pack.rst  cmake_functions.rst  compile_existing.rst  conf.py  configuration.rst  documenting.rst  index.rst  new_project.rst  testing_monitoring.rst
doc/tutorial/: CMakeLists.txt  project_info.cmake
etc/bash_completion/: bv_maker-completion.bash
etc/bash_completion.d/: bv_maker-completion.bash
python/brainvisa/maker/: build.py  (+24 more)
python/brainvisa_cmake/: bbi_daily.py  brainvisa_client_components.py  brainvisa_projects.py  brainvisa_projects_versions.py  build.py  commands.py  components_definition.py  git.py  jenkins.py  main.py  path.py  sources.py  svn_to_git.py  utils.py  version.py  version_number.py
release/: bv_create_release_branches  bv_tag_release  git.py
scripts/: bv_sip4make  cleanDependencyGraph.py
scripts/windows/: anatomist.bat  brainvisa.bat  executecmd.bat  library.bat  setupenv.bat
share/: pyproject.toml.in
soma-base/: CMakeLists.txt
src/: bv_env.cc
tests/: test_bv_maker.py  test_bv_maker_git.py  test_bvenv.sh
(+20 files in other folders)
